assets/css/trainerPage/trainerPage.scss
.heroTrainer {
  background: url(https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bf23e88edf0700891eeac2e0cb3664b8&auto=format&fit=crop&w=750&q=80);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 200px;
}

.trainerContainer {
  width: 80vw;
  max-width: 900px;
  margin: auto;
  padding: 40px 20px;
  justify-content: center;
}

.trainerInfo {
  display: flex;
  color: black;
  margin-top: 35px;
}

.trainerInfo__right {
  width: 50%;
  padding: 15px 0 0 15px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.trainerInfo__right--admin {
  transition: all .3s ease-in;

  &:hover {

    .btn:first-of-type {
      color: white;
      font-size: .85em;
      background: grey;
      border-radius: 5px;
      padding: 10px 15px;
    }
  }
}

.btn--editingInfo {
  color: white !important;
  font-size: .85em !important;
  background: grey !important;
  border-radius: 5px !important;
  padding: 10px 15px !important;
}

.trainerInfo__left {
  display: flex;
  flex-direction: column;
}

.trainerInfo__imageContainer {
  height: 350px;
  width: 50%;
}

.justify {
  text-align: justify;
}

.trainerInfo__image {
  max-width: 100%;
  height: 100%;
}

.trainerInfo__rating {
  display: inline;
  font-size: 1.2em;
}

.trainerInfo__count {
  font-size: .8em;
  font-style: italic;
  margin-left: 10px;
}

.fa-star--big {
  font-size: 1.3em;
}

.trainerInfo__desc {
  margin: 20px 0 10px 0;
  font-size: 1em;
  overflow-wrap: break-word;
  width: 100%;
  display: flex;
  align-items: center;
}

.infoText {
  margin-left: 30px;
}

.tagsContainer {
  margin: 35px 0;
  max-width: 400px;
  min-height: 165px;

  &:hover {
    .btn:first-of-type {
      color: white;
      font-size: .85em;
      background: grey;
      border-radius: 5px;
      padding: 10px 15px;
    }
  }
}

.u-marginTop {
  margin-top: 35px;
}

.filters__tag--big {
  padding: 10px 15px;
}

.u-w400 {
  width: 400px;
}

.filters__tag--noInteraction {
  &:hover {
    color: black;
    background: white;
    cursor: default;
  }
}

.btnPrimary {
  border: none;
  color: white;
  cursor: pointer;
  text-decoration: none;
  background: rgba(0, 0, 0, .78);
  text-align: center;
  padding: 15px 20px;
  max-height: 55px;
  transition: all .2s;
  border-radius: 3px;
  display: block;

  &:hover {
    background: black;
  }
}

.filters__btnWrap {
  margin-top: 15px;
  width: 80px;
}

.trainerTextarea,
.trainerInput {
  border-radius: 2px;
  background: none;
  border: 1px solid #eeeeee;
  width: 100%;
}

.trainerTextarea {
  padding: 5px;
  min-height: 150px;
  margin: 10px 0;
  resize: none;
  overflow-y: auto;
  overflow-x: hidden;
}

.trainerInput {
  height: 30px;
  padding: 3px 0 3px 5px;
  margin-left: 20px;
}

.btn {
  color: grey;
  font-size: .85em;
  margin-right: 10px;
  background: none;
  border: none;
  cursor: pointer;
  outline: none;
  padding: 5px 5px 5px 0;
  text-decoration: none;
  transition: all .3s ease-in-out;

  &:hover {
    text-decoration: underline;
  }
}

.btn--cancel {
  color: red;
}

.buttonContainer {
  display: flex;
  margin-top: 10px;
}

.info {
  background: #eee;
  padding: 15px;
  border-radius: 5px;

  &:hover {
    .fa-info-circle--info {
      color: #4481ff;
    }

    .fa-info-circle--danger {
      color: #a9000f;
    }

    .fa-info-circle--success {
      color: #008000;
    }
  }
}

.info--trainer {
  margin-top: 20px;
  margin-bottom: 20px;
}

.info--customer {
  margin-bottom: 20px;
}

.info--danger {
  background: #ffb3b3;
}

.info--success {
  background: rgba(119, 255, 3, 0.42);
}

.u-mgRt {
  margin-right: 15px;
}

.fa-info-circle {
  font-size: 1.4em;
  transition: all .3s ease-in-out;
  color: black;
}

.filters__tags--edit {
  margin: 15px 0;
}

@media only screen and (max-width: 600px) {
  .button__content {
    transition: none;

    &:hover {
      background: black;
    }
  }

  .trainerInfo {
    flex-direction: column;
  }

  .trainerInfo__imageContainer {
    width: 100%;
    height: inherit;
  }

  .trainerInfo__image {
    width: 100%;
  }

  .trainerInfo {
    width: 100%;
  }

  .trainerInfo__right {
    width: 100%;
    padding: 15px 10px 0 10px;
  }

  .tagsContainer {
    margin: 15px 0 30px 0;
    max-width: 100%;
  }

  .trainerContainer {
    width: 100vw;
  }
}

